# VidBox

./: .gitignore  .travis.yml  README.md  appimage.yml  linuxdeploy-plugin-gtk3.sh  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md
data/: MainWindow.ui  Menus.ui  PreferenceDialog.ui  app.appdata.xml.in  app.desktop.in  app.gresource.xml  app.gschema.xml  com.github.coslyk.VideoSplitter.appdata.xml  com.github.coslyk.VideoSplitter.appdata.xml.in  com.github.coslyk.VideoSplitter.desktop  com.github.coslyk.VideoSplitter.gresource.xml  com.github.coslyk.VideoSplitter.gschema.xml  meson.build
po/: LINGUAS  POTFILES  af.po  ak.po  ar.po  az.po  be.po  bg.po  bn.po  bs.po  ca.po  ckb.po  com.github.coslyk.VidBox.pot  com.github.coslyk.VideoSplitter.pot  cs.po  cv.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  (+48 more)
src/: AboutDialog.vala  Application.vala  Dialogs.vala  Ffmpeg.vala  MainWindow.vala  Merger.vala  MpvController.vala  PreferenceDialog.vala  SegmentWidget.vala  SliceInfo.vala  Splitter.vala  SplitterItem.vala  TaskItem.vala  TaskManager.vala  Utils.vala  config.vala.in  main.vala  meson.build
vapi/: epoxy.vapi  gdk-wayland-3.0.vapi  mpv.vapi
