
# Install .desktop file
install_data(
    'com.github.coslyk.VideoSplitter.desktop',
    install_dir: join_paths(get_option('datadir'), 'applications')
)

# Install logo
install_data(
    'com.github.coslyk.VideoSplitter.png',
    install_dir: join_paths(get_option('datadir'), 'icons')
)

# Install .appdata.xml file
install_data(
    'com.github.coslyk.VideoSplitter.appdata.xml',
    install_dir: join_paths(get_option('datadir'), 'metainfo')
)

# Install GSettings schema
install_data (
    'com.github.coslyk.VideoSplitter.gschema.xml',
    install_dir: join_paths (get_option ('datadir'), 'glib-2.0', 'schemas')
)